--- a/cfspopcon/default_units.yaml
+++ b/cfspopcon/default_units.yaml
@@ -57,6 +57,8 @@ lambda_q_factor: ""
 lambda_q_scaling: null
 lambda_q: "mm"
 lengyel_overestimation_factor: ""
+line_averaged_density_frac: ""
+line_averaged_electron_density: "n19"
 loop_voltage: "V"
 magnetic_field_on_axis: "T"
 major_radius: "m"
@@ -110,7 +112,7 @@ SOC_LOC_ratio: ""
 SOL_momentum_loss_function: null
 SOL_power_loss_fraction: ""
 spitzer_resistivity: "m * ohm"
-summed_impurity_density: "n19"
+summed_impurity_average_density: "n19"
 surface_area: "m**2"
 target_electron_density: "n19"
 target_electron_flux: "m**-2 s**-1"
